# jupyter-problog

./: .gitignore  LICENSE  readme.md  sample.ipynb  setup.cfg  setup.py
examples/: sampling.ipynb
metaproblog/: theory_manager.py
metaproblog/jupyterkernel/: problog_wrapper.py
metaproblog/querying/: formula_wrapper.py  query_factory.py  sample_query.py
problog_kernel/: kernel.json  output_formatting.py  pblkernel.py  problog_wrapper.py  query_session.py
problogkernel/: kernel.json
src/metaproblog/jupyterkernel/: __main__.py  kernel_options.py  output_formatting.py  pblkernel.py  problog_wrapper.py  query_session.py
src/metaproblog/querying/: amc_query.py  query_base.py
