[metadata]
name = metaproblog
version = 0.0.1
author = Krishnan Govindraj
author_email = krishnangovindraj1794@gmail.com
description = Easier interface to problog language for applications such as the included jupyter kernel.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/krishnangovindraj/jupyter-problog
project_urls =
    Bug Tracker = https://github.com/krishnangovindraj/jupyter-problog
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = metaproblog
packages = find:
python_requires = >=3.6

[options.packages.find]
where = metaproblog
